<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movies_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tvshows_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tvshows_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorites_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_phone"
        android:title="@string/contacts_label"
        app:showAsAction="ifRoom" />
</menu>